# Hedit

./: .gitignore  BuildConfiguration.mk  CMakeLists.txt  Configuration.mk  GNUmakefile  Makefile  NMakeHelperGenerator.bat  README.md  build.zig  buildConfiguration.mk  clang.sh  gcc.bat  gcc.sh  gnu.bat  gnu.sh  hbuild.c  hedit.c  heditTests.c  makefile  msvc.bat  pelles.bat  tcc.bat  tcc.sh  test.txt  vcvars64_ps.bat
buildsystem/: ClangGenDeps.bat  Makefile  MsvcGenDeps.bat  NMakeHelper.bat  clean.bat  createDirs.bat
include/: buffer.h  bufferChunk.h  bufferIterator.h  bufferView.h  textBuffer.h  textBufferView.h
include/backend/: cursor.h  hedit.h  row.h
include/backend/buffer/: buffer.h  textChunk.h
include/fenwickTree/: _fenwickTree.h  fenwickTreeI32.h
include/file/: fileHandler.h  fileMapping.h  fileWriter.h
include/main/: buffer.h  bufferChunk.h  textBufferView.h  ui.h
include/main/file/: fileMapping.h  fileWriter.h
include/test/: bufferTest.h  buffer_test.h  test.h
include/window/: window.h
src/: buffer.c  main.c  textBuffer.c  textBufferView.c
src/backend/: cursor.c  hedit.c
src/backend/buffer/: buffer.c
src/fenwickTree/: fenwickTreeI32.c
src/file/: fileWriter.c
src/file/linux/: fileMapping.c
src/file/other/: fileMapping.c
src/file/windows/: fileMapping.c
src/main/: buffer.c  main.c  textBufferView.c  ui.c
src/main/file/: fileMapping.c  fileWriter.c
src/main/file/linux/: fileMapping.c
src/main/file/other/: fileMapping.c
src/main/file/windows/: fileMapping.c
src/test/: bufferTest.c  buffer_test.c  test.c  test_buffer.c
src/window/: window.c
src/window/linux/: window_impl.h
src/window/win/: window_impl.h
test/: test.c
test/fenwickTree/: test_fenwickTreeI32.h
test/include/: buffer_test.h  test.h  testResult.h  test_buffer.h
test/src/: buffer_test.c  test.c  test_buffer.c
